== 2.2.4 (2010-09-22)

=== Bugfixes
* C99 features used by gherkin code (#75 Graham Agnew)

== 2.2.3 (2010-09-21)

=== Bugfixes
* Add back missing development dependency on cucumber (Aslak Hellesøy)

== 2.2.2 (2010-09-21)

=== New Features
* Use json instead of json_pure (Aslak Hellesøy)
* JSON formatter and parser can now omit JSON serialization (for speed) and work directly on objects (Aslak Hellesøy)

== 2.2.1 (2010-09-12)

=== New Features
* Windows gems are now built against 1.8.6-p287 and 1.9.1-p243, on both mswin32 and mingw32, and should work on 1.8.6, 1.8.7, 1.9.1 and 1.9.2 versions of rubyinstaller.org as well as older windows rubies. (Aslak Hellesøy)

=== Changed features
* Build system no longer uses Jeweler - only Rake, Bundler and Rubygems (Aslak Hellesøy)

== 2.2.0 (2010-07-26)

This release breaks some APIs since the previous 2.1.5 release. If you install gherkin 2.2.0 you must also upgrade to
Cucumber 0.9.0.

=== Bugfixes
* I18nLexer doesn't recognise language header with \r\n on OS X. (#70 Aslak Hellesøy)

=== New Features
* Pure Java FilterFormatter. (Aslak Hellesøy)
* Pure Java JSONFormatter. (Aslak Hellesøy)

=== Changed Features
* All formatter events take exactly one argument. Each argument is a single object with all data. (Aslak Hellesøy)
* Several java classes have moved to a different package in order to improve separation of concerns. (Aslak Hellesøy)

== 2.1.5 (2010-07-17)

=== Bugfixes
* Line filter works on JRuby with Scenarios without steps. (Aslak Hellesøy)

=== Changed Features
* The JSON schema now puts background inside the "elements" Array. Makes parsing simpler. (Aslak Hellesøy)

== 2.1.4 (2010-07-14)

=== Bugfixes
* #steps fails on JRuby with 2.1.3 (#68 Aslak Hellesøy)

== 2.1.3 (2010-07-14)

=== Bugfixes
* Examples are not cleared when an ignored Scenario Outline/Examples is followed by a Scenario. (#67 Aslak Hellesøy)

== 2.1.2 (2010-07-13)

=== Bugfixes