@@ -10,6 +10,7 @@ module Gherkin
     class I18nLexer
       native_impl('gherkin')
 
+      COMMENT_PATTERN = /^\s*#/
       LANGUAGE_PATTERN = /^\s*#\s*language\s*:\s*([a-zA-Z\-]+)/ #:nodoc:
       attr_reader :i18n_language
 
@@ -30,9 +31,15 @@ module Gherkin
       end
 
       def lang(source)
-        line_one = source.split(/\n/)[0]
-        match = LANGUAGE_PATTERN.match(line_one)
-        I18n.get(match ? match[1] : 'en')
+        lang = 'en'
+        source.split(/\n/).each do |line|
+          break unless COMMENT_PATTERN =~ line
+          if LANGUAGE_PATTERN =~ line
+            lang = $1
+            break
+          end
+        end
+        I18n.get(lang)
       end
 
     end
